RESOLVED FIXED220576
REGRESSION(r262893): feComponentTransfer is not rendered correctly on Retina display
https://bugs.webkit.org/show_bug.cgi?id=220576
Summary REGRESSION(r262893): feComponentTransfer is not rendered correctly on Retina ...
Xidorn Quan
Reported 2021-01-12 20:20:24 PST
Created attachment 417504 [details] testcase Steps to reproduce: 1. open the testcase 2. click the "Set filter" button Expected result: The image becomes blurred. Actual result: The image is blurred, but also stretched a bit. (I've observed even worse distortion when more complicated filters are added.) I've tested Firefox and Chrome, and neither of them has this problem. After some diagnose, I think this is because `feComponentTransfer` doesn't work correctly when the SVG is not somehow rendered. This behavior can be easily reproduced if the SVG element is `display: none`. (Note that Firefox shows nothing when SVG element is `display: none` though, not sure whose behavior is correct here.) That makes me think that the distorted state being persisted is probably related to bug 99996 that even if the SVG element is correctly rendered, the filter result is not updated accordingly.
Attachments
testcase (646 bytes, text/html)
2021-01-12 20:20 PST, Xidorn Quan
no flags
reduced test case (327 bytes, text/html)
2021-01-26 09:12 PST, Said Abou-Hallawa
no flags
more reduced test case (324 bytes, text/html)
2021-01-28 15:05 PST, Said Abou-Hallawa
no flags
Patch (4.97 KB, patch)
2021-01-28 18:19 PST, Said Abou-Hallawa
simon.fraser: review+
Patch (4.94 KB, patch)
2021-01-28 19:36 PST, Said Abou-Hallawa
no flags
Patch (4.94 KB, patch)
2021-01-28 19:37 PST, Said Abou-Hallawa
no flags
Simon Fraser (smfr)
Comment 1 2021-01-13 11:55:08 PST
The stretching seems to be related to Retina scaling (but only vertically?)
Radar WebKit Bug Importer
Comment 2 2021-01-13 11:55:18 PST
Said Abou-Hallawa
Comment 3 2021-01-26 09:12:48 PST
Created attachment 418428 [details] reduced test case The stretching bug can occur with just static pages, i.e. no DOM change is needed to reproduce the bug.
Said Abou-Hallawa
Comment 4 2021-01-28 14:59:12 PST
This is a regression of r262893.
Said Abou-Hallawa
Comment 5 2021-01-28 15:05:24 PST
Created attachment 418673 [details] more reduced test case
Said Abou-Hallawa
Comment 6 2021-01-28 18:19:02 PST
Simon Fraser (smfr)
Comment 7 2021-01-28 18:58:35 PST
Comment on attachment 418688 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=418688&action=review > LayoutTests/fast/hidpi/filters-component-transfer-expected.html:7 > + filter: url("#a"); You can remove this here.
Said Abou-Hallawa
Comment 8 2021-01-28 19:36:02 PST
Said Abou-Hallawa
Comment 9 2021-01-28 19:37:24 PST
EWS
Comment 10 2021-01-29 06:53:37 PST
Committed r272059: <https://trac.webkit.org/changeset/272059> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418700 [details].
Note You need to log in before you can comment on or make changes to this bug.